# ev-charger

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  prestart.cmd  pyproject.toml
.github/workflows/: docker.yaml  pytest.yml
app/: countries_states_cities_min.json  gen_data.py  main.py
app/constant/: regex.py
app/core/: __init__.py  config.py  container.py  database.py  dependencies.py  interception.py  security.py
app/model/: __init__.py  amenities.py  base_model.py  city.py  district.py  ev_charger.py  ev_charger_port.py  location.py  location_amenities.py  location_elastic.py  location_search_history.py  power_output.py  power_plug_type.py  user_favorite.py  working_day.py
app/repository/: __init__.py  amenities_repository.py  base_repository.py  city_repository.py  district_repository.py  elastic_repository.py  ev_charger_port_repository.py  ev_charger_repository.py  location_amenities_repository.py  location_repository.py  location_search_history_repository.py  power_output_repository.py  power_plug_type_repository.py  user_favorite_repository.py
app/schema/: amenities_schema.py  base_schema.py  city_schema.py  district_schema.py  ev_charger_port_schema.py  ev_charger_schema.py  gg_map_schema.py  google_api_schema.py  location_amenities_schema.py  location_schema.py  location_search_history_schema.py  power_output_schema.py  user_favorite_schema.py  (+2 more)
data/: 10south.json  center.json  east.json  multi-connectors.json  north.json  script.py  south.json  west.json
migrations/: env.py
server/: main.py
tests/: conftest.py
(+73 files in other folders)
