[tool.poetry]
name = "ev-charger"
version = "1.0.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
fastapi = "0.111.0"
uvicorn = "0.30.1"
dependency-injector = "4.41.0"
pydantic = "2.8.2"
pydantic-settings = "2.3.4"
sqlalchemy = "2.0.31"
sqlmodel = "0.0.19"
pyjwt = "2.8.0"
psycopg2 = "2.9.9"
alembic = "1.13.2"
loguru = "0.7.2"
pytz = "2024.1"
elasticsearch = "^8.14.0"
requests = "^2.32.3"
python-jose = "^3.3.0"
geopandas = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pre-commit = "3.7.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
